RESOLVED FIXED288376
The Networking process sometimes crash in Download::resume
https://bugs.webkit.org/show_bug.cgi?id=288376
Summary The Networking process sometimes crash in Download::resume
Per Arne Vollan
Reported 2025-02-24 10:16:22 PST
The Networking process sometimes crash in Download::resume.
Attachments
Per Arne Vollan
Comment 1 2025-02-24 10:16:23 PST
Per Arne Vollan
Comment 2 2025-02-24 10:20:10 PST
EWS
Comment 3 2025-02-24 13:28:02 PST
Committed 290972@main (57d53c85b1ab): <https://commits.webkit.org/290972@main> Reviewed commits have been landed. Closing PR #41207 and removing active labels.
EWS
Comment 4 2025-02-25 15:21:33 PST
Committed 289651.179@safari-7621-branch (6e6c16fc2286): <https://commits.webkit.org/289651.179@safari-7621-branch> Reviewed commits have been landed. Closing PR #2672 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.