The Networking process sometimes crash in Download::resume https://bugs.webkit.org/show_bug.cgi?id=288376 rdar://145354369

Reviewed by Chris Dumez.

If we fail to create a NSURLSessionDownloadTask from the resume data, we will attempt to create a hash map
entry where the task identifier key is 0. This will cause a release assert when the key is checked.

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::resume):

Canonical link: https://commits.webkit.org/290972@main